# hermes-jepa-edge

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: phase1_adapter.yaml  phase2_hermes.yaml  phase2b_distill.yaml  phase3_edge.yaml
configs/vjepa2_direct/: phase2_hermes.yaml
external_checkpoints/lewm-tworooms/: README.md
prompts/: base.xml  debug.xml  edge.xml  research.xml  robotics.xml  training.xml
scripts/: generate_teacher_trajectories.py  phase0_compat_check.py  phase1_train_adapter.py  phase2_hermes_backbone.py  phase2_merge_lora.py  phase2b_distillation.py  phase3_export_tensorrt.py
src/adapters/: compat_check.py  lewm_loader.py  projection.py
src/distillation/: teacher_student.py
src/edge/: tensorrt_export.py
src/pipeline/: hermes_vla.py
src/utils/: __init__.py
src/visual_encoders/: __init__.py  factory.py
tests/: test_distillation.py  test_lewm_loader.py  test_pipeline.py  test_projection.py  test_utils.py  test_visual_encoders.py
